k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: selfhealing-demo
spec:
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30400
  type: NodePort
